# data-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  pythonapp.yml  test.yml
dpc_covid19/: __init__.py  code.py  fetch.py
tests/: conftest.py  test_fetch.py
