[metadata]
name = c19
description = python utilities for collecting COVID-19 public data
author = Stefano Miccoli
author_email = stefano.miccoli@polimi.it
url = https://github.com/COVID-19-routes/data-model
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    dpc_covid19
install_requires =
    pandas~=1.3.0
    numpy<2.0
